--- a/index.html
+++ b/index.html
@@ -249,7 +249,146 @@
                 </div>
             </div>
         </div>
-        <footer></footer>
+        <footer class="mx-5">
+            <div class="row d-flex">
+                <div class="col-4">
+                    <div class="row">
+                        <h1>About Us</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit, sed do eiusmod tempor incididunt ut labore et
+                            dolore magna aliqua. Ut enim ad minim veniam, quis
+                            nostrud exercitation ullamco laboris nisi ut aliquip
+                            ex ea commodo consequat. Duis aute irure dolor in
+                            reprehenderit in voluptate velit esse cillum dolore
+                            eu fugiat nulla pariatur.
+                        </p>
+                        <button class="btn btn-warning">About Us</button>
+                    </div>
+                    <div class="row">
+                        <h1>Photo Stream</h1>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="row">
+                        <h1>Latest Tweets</h1>
+                        <ul>
+                            <li>
+                                <p>
+                                    Lorem ipsum consectetuer adipiscing elit,
+                                    seddia web design
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Lorem ipsum consectetuer adipiscing elit,
+                                    seddia web design
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Lorem ipsum consectetuer adipiscing elit,
+                                    seddia web design
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Lorem ipsum consectetuer adipiscing elit,
+                                    seddia web design
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Lorem ipsum consectetuer adipiscing elit,
+                                    seddia web design
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <h1>Social Connecting</h1>
+                    </div>
+                </div>
+
+                <div class="col-4">
+                    <div class="row">
+                        <h1>Contact Info</h1>
+                        <ul>
+                            <li>
+                                <p>
+                                    Lorem ipsum dolor sit amet,consectetuer
+                                    adipiscing elit, sed diam nonummy nibh web
+                                    design
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Phone: +1 800 258 2689<br />
+                                    +1 800 258 2689
+                                </p>
+                            </li>
+                            <li>
+                                <p>Email: info(at)skokov.com</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <h1>Follow Us</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing
+                            elit, sed diam nonummy nibh euismod
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div
+                class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top"
+            >
+                <p>© 2020HACKTIV8 WORKSHOP PROGRAM PT SUMBER JAYA</p>
+                <div class="row">
+                    <ul class="d-flex" style="list-style: none">
+                        <li class="px-3">
+                            <a class="navigation-item-style" href="./index.html"
+                                >HOME</a
+                            >
+                        </li>
+                        <li class="px-3">
+                            <a
+                                class="navigation-item-style"
+                                href="./portfolio.html"
+                                >PORTFOLIO</a
+                            >
+                        </li>
+                        <li class="px-3">
+                            <a class="navigation-item-style" href="./blog.html"
+                                >BLOG</a
+                            >
+                        </li>
+                        <li class="px-3">
+                            <a
+                                class="navigation-item-style"
+                                href="./about_us.html"
+                                >ABOUT US</a
+                            >
+                        </li>
+                        <li class="px-3">
+                            <a
+                                class="navigation-item-style"
+                                href="./contact.html"
+                                >CONTACT</a
+                            >
+                        </li>
+                        <li class="px-3">
+                            <a
+                                class="navigation-item-style"
+                                href="./achievement.html"
+                                >ACHIEVEMENT</a
+                            >
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
             integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
